src/parser.output
Terminals unused in grammar

   UNREC


Grammar

    0 $accept: program $end

    1 program: program_head decls compound_stat PERIOD

    2 program_head: PROGRAM ID L_PAREN ID COMMA ID R_PAREN SEMICOLON

    3 decls: const_decl_part type_decl_part var_decl_part proc_decl_part

    4 const_decl_part: CONST const_decl_list SEMICOLON
    5                | /* empty */

    6 const_decl_list: const_decl
    7                | const_decl_list SEMICOLON const_decl

    8 const_decl: ID EQUAL expr

    9 type_decl_part: TYPE type_decl_list SEMICOLON
   10               | /* empty */

   11 type_decl_list: type_decl
   12               | type_decl_list SEMICOLON type_decl

   13 type_decl: ID EQUAL type

   14 type: simple_type
   15     | structured_type

   16 simple_type: scalar_type
   17            | REAL
   18            | ID

   19 scalar_type: L_PAREN scalar_list R_PAREN
   20            | INT
   21            | BOOL
   22            | CHAR

   23 scalar_list: scalar_list COMMA ID
   24            | ID COMMA ID

   25 structured_type: ARRAY LS_BRACKET array_type RS_BRACKET OF type
   26                | RECORD field_list END

   27 array_type: simple_type
   28           | expr RANGE expr

   29 field_list: field
   30           | field_list SEMICOLON field

   31 field: ID COLON type

   32 var_decl_part: VAR var_decl_list SEMICOLON
   33              | /* empty */

   34 var_decl_list: var_decl
   35              | var_decl_list SEMICOLON var_decl

   36 var_decl: ID COLON type
   37         | ID COMMA var_decl

   38 proc_decl_part: proc_decl_list
   39               | /* empty */

   40 proc_decl_list: proc_decl
   41               | proc_decl_list proc_decl

   42 proc_decl: proc_heading decls compound_stat SEMICOLON

   43 proc_heading: PROCEDURE ID f_parm_decl SEMICOLON
   44             | FUNCTION ID f_parm_decl COLON ID SEMICOLON

   45 f_parm_decl: L_PAREN f_parm_list R_PAREN
   46            | L_PAREN R_PAREN

   47 f_parm_list: f_parm
   48            | f_parm_list SEMICOLON f_parm

   49 f_parm: ID COLON ID
   50       | VAR ID COLON ID

   51 compound_stat: _BEGIN stat_list END

   52 stat_list: stat
   53          | stat_list SEMICOLON stat

   54 stat: simple_stat
   55     | struct_stat
   56     | /* empty */

   57 simple_stat: var ASSIGN expr
   58            | proc_invok
   59            | compound_stat

   60 proc_invok: plist_finvok R_PAREN
   61           | ID L_PAREN R_PAREN

   62 var: ID
   63    | var PERIOD ID
   64    | subscripted_var RS_BRACKET

   65 subscripted_var: var LS_BRACKET expr
   66                | subscripted_var COMMA expr

   67 expr: simple_expr
   68     | expr EQUAL simple_expr
   69     | expr NOT_EQUAL simple_expr
   70     | expr LESS_OR_EQUAL simple_expr
   71     | expr LESS simple_expr
   72     | expr GREATER_OR_EQUAL simple_expr
   73     | expr GREATER simple_expr

   74 simple_expr: term
   75            | PLUS term
   76            | MINUS term
   77            | simple_expr PLUS term
   78            | simple_expr MINUS term
   79            | simple_expr OR term

   80 term: factor
   81     | term MULTIPLY factor
   82     | term DIVIDE factor
   83     | term DIV factor
   84     | term MOD factor
   85     | term AND factor

   86 factor: var
   87       | unsigned_const
   88       | L_PAREN expr R_PAREN
   89       | func_invok
   90       | NOT factor

   91 unsigned_const: unsigned_num
   92               | STRING

   93 unsigned_num: INT_CONST
   94             | REAL_CONST

   95 func_invok: plist_finvok R_PAREN
   96           | ID L_PAREN R_PAREN

   97 plist_finvok: ID L_PAREN parm
   98             | plist_finvok COMMA parm

   99 parm: expr

  100 struct_stat: IF expr THEN matched_stat ELSE stat
  101            | IF expr THEN stat
  102            | WHILE expr DO stat
  103            | CONTINUE
  104            | EXIT

  105 matched_stat: simple_stat
  106             | IF expr THEN matched_stat ELSE matched_stat
  107             | WHILE expr DO matched_stat
  108             | CONTINUE
  109             | EXIT


Terminals, with rules where they appear

$end (0) 0
error (256)
BOOL (258) 21
CHAR (259) 22
STRING (260) 92
INT (261) 20
REAL (262) 17
RECORD (263) 26
_BEGIN (264) 51
END (265) 26 51
IF (266) 100 101 106
THEN (267) 100 101 106
ELSE (268) 100 106
WHILE (269) 102 107
DO (270) 102 107
CONTINUE (271) 103 108
EXIT (272) 104 109
OF (273) 25
ID (274) 2 8 13 18 23 24 31 36 37 43 44 49 50 61 62 63 96 97
CONST (275) 4
INT_CONST (276) 93
REAL_CONST (277) 94
PROGRAM (278) 2
TYPE (279) 9
VAR (280) 32 50
ARRAY (281) 25
FUNCTION (282) 44
PROCEDURE (283) 43
L_PAREN (284) 2 19 45 46 61 88 96 97
R_PAREN (285) 2 19 45 46 60 61 88 95 96
LS_BRACKET (286) 25 65
RS_BRACKET (287) 25 64
PERIOD (288) 1 63
COMMA (289) 2 23 24 37 66 98
SEMICOLON (290) 2 4 7 9 12 30 32 35 42 43 44 48 53
COLON (291) 31 36 44 49 50
RANGE (292) 28
ASSIGN (293) 57
UNREC (294)
NOT (295) 90
AND (296) 85
MOD (297) 84
DIV (298) 83
DIVIDE (299) 82
MULTIPLY (300) 81
OR (301) 79
MINUS (302) 76 78
PLUS (303) 75 77
GREATER_OR_EQUAL (304) 72
GREATER (305) 73
LESS_OR_EQUAL (306) 70
LESS (307) 71
NOT_EQUAL (308) 69
EQUAL (309) 8 13 68


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
program (56)
    on left: 1, on right: 0
program_head (57)
    on left: 2, on right: 1
decls (58)
    on left: 3, on right: 1 42
const_decl_part (59)
    on left: 4 5, on right: 3
const_decl_list (60)
    on left: 6 7, on right: 4 7
const_decl (61)
    on left: 8, on right: 6 7
type_decl_part (62)
    on left: 9 10, on right: 3
type_decl_list (63)
    on left: 11 12, on right: 9 12
type_decl (64)
    on left: 13, on right: 11 12
type (65)
    on left: 14 15, on right: 13 25 31 36
simple_type (66)
    on left: 16 17 18, on right: 14 27
scalar_type (67)
    on left: 19 20 21 22, on right: 16
scalar_list (68)
    on left: 23 24, on right: 19 23
structured_type (69)
    on left: 25 26, on right: 15
array_type (70)
    on left: 27 28, on right: 25
field_list (71)
    on left: 29 30, on right: 26 30
field (72)
    on left: 31, on right: 29 30
var_decl_part (73)
    on left: 32 33, on right: 3
var_decl_list (74)
    on left: 34 35, on right: 32 35
var_decl (75)
    on left: 36 37, on right: 34 35 37
proc_decl_part (76)
    on left: 38 39, on right: 3
proc_decl_list (77)
    on left: 40 41, on right: 38 41
proc_decl (78)
    on left: 42, on right: 40 41
proc_heading (79)
    on left: 43 44, on right: 42
f_parm_decl (80)
    on left: 45 46, on right: 43 44
f_parm_list (81)
    on left: 47 48, on right: 45 48
f_parm (82)
    on left: 49 50, on right: 47 48
compound_stat (83)
    on left: 51, on right: 1 42 59
stat_list (84)
    on left: 52 53, on right: 51 53
stat (85)
    on left: 54 55 56, on right: 52 53 100 101 102
simple_stat (86)
    on left: 57 58 59, on right: 54 105
proc_invok (87)
    on left: 60 61, on right: 58
var (88)
    on left: 62 63 64, on right: 57 63 65 86
subscripted_var (89)
    on left: 65 66, on right: 64 66
expr (90)
    on left: 67 68 69 70 71 72 73, on right: 8 28 57 65 66 68 69 70
    71 72 73 88 99 100 101 102 106 107
simple_expr (91)
    on left: 74 75 76 77 78 79, on right: 67 68 69 70 71 72 73 77 78
    79
term (92)
    on left: 80 81 82 83 84 85, on right: 74 75 76 77 78 79 81 82 83
    84 85
factor (93)
    on left: 86 87 88 89 90, on right: 80 81 82 83 84 85 90
unsigned_const (94)
    on left: 91 92, on right: 87
unsigned_num (95)
    on left: 93 94, on right: 91
func_invok (96)
    on left: 95 96, on right: 89
plist_finvok (97)
    on left: 97 98, on right: 60 95 98
parm (98)
    on left: 99, on right: 97 98
struct_stat (99)
    on left: 100 101 102 103 104, on right: 55
matched_stat (100)
    on left: 105 106 107 108 109, on right: 100 106 107


state 0

    0 $accept: . program $end

    PROGRAM  shift, and go to state 1

    program       go to state 2
    program_head  go to state 3


state 1

    2 program_head: PROGRAM . ID L_PAREN ID COMMA ID R_PAREN SEMICOLON

    ID  shift, and go to state 4


state 2

    0 $accept: program . $end

    $end  shift, and go to state 5


state 3

    1 program: program_head . decls compound_stat PERIOD

    CONST  shift, and go to state 6

    $default  reduce using rule 5 (const_decl_part)

    decls            go to state 7
    const_decl_part  go to state 8


state 4

    2 program_head: PROGRAM ID . L_PAREN ID COMMA ID R_PAREN SEMICOLON

    L_PAREN  shift, and go to state 9


state 5

    0 $accept: program $end .

    $default  accept


state 6

    4 const_decl_part: CONST . const_decl_list SEMICOLON

    ID  shift, and go to state 10

    const_decl_list  go to state 11
    const_decl       go to state 12


state 7

    1 program: program_head decls . compound_stat PERIOD

    _BEGIN  shift, and go to state 13

    compound_stat  go to state 14


state 8

    3 decls: const_decl_part . type_decl_part var_decl_part proc_decl_part

    TYPE  shift, and go to state 15

    $default  reduce using rule 10 (type_decl_part)

    type_decl_part  go to state 16


state 9

    2 program_head: PROGRAM ID L_PAREN . ID COMMA ID R_PAREN SEMICOLON

    ID  shift, and go to state 17


state 10

    8 const_decl: ID . EQUAL expr

    EQUAL  shift, and go to state 18


state 11

    4 const_decl_part: CONST const_decl_list . SEMICOLON
    7 const_decl_list: const_decl_list . SEMICOLON const_decl

    SEMICOLON  shift, and go to state 19


state 12

    6 const_decl_list: const_decl .

    $default  reduce using rule 6 (const_decl_list)


state 13

   51 compound_stat: _BEGIN . stat_list END

    _BEGIN    shift, and go to state 13
    IF        shift, and go to state 20
    WHILE     shift, and go to state 21
    CONTINUE  shift, and go to state 22
    EXIT      shift, and go to state 23
    ID        shift, and go to state 24

    $default  reduce using rule 56 (stat)

    compound_stat    go to state 25
    stat_list        go to state 26
    stat             go to state 27
    simple_stat      go to state 28
    proc_invok       go to state 29
    var              go to state 30
    subscripted_var  go to state 31
    plist_finvok     go to state 32
    struct_stat      go to state 33


state 14

    1 program: program_head decls compound_stat . PERIOD

    PERIOD  shift, and go to state 34


state 15

    9 type_decl_part: TYPE . type_decl_list SEMICOLON

    ID  shift, and go to state 35

    type_decl_list  go to state 36
    type_decl       go to state 37


state 16

    3 decls: const_decl_part type_decl_part . var_decl_part proc_decl_part

    VAR  shift, and go to state 38

    $default  reduce using rule 33 (var_decl_part)

    var_decl_part  go to state 39


state 17

    2 program_head: PROGRAM ID L_PAREN ID . COMMA ID R_PAREN SEMICOLON

    COMMA  shift, and go to state 40


state 18

    8 const_decl: ID EQUAL . expr

    STRING      shift, and go to state 41
    ID          shift, and go to state 42
    INT_CONST   shift, and go to state 43
    REAL_CONST  shift, and go to state 44
    L_PAREN     shift, and go to state 45
    NOT         shift, and go to state 46
    MINUS       shift, and go to state 47
    PLUS        shift, and go to state 48

    var              go to state 49
    subscripted_var  go to state 31
    expr             go to state 50
    simple_expr      go to state 51
    term             go to state 52
    factor           go to state 53
    unsigned_const   go to state 54
    unsigned_num     go to state 55
    func_invok       go to state 56
    plist_finvok     go to state 57


state 19

    4 const_decl_part: CONST const_decl_list SEMICOLON .
    7 const_decl_list: const_decl_list SEMICOLON . const_decl

    ID  shift, and go to state 10

    $default  reduce using rule 4 (const_decl_part)

    const_decl  go to state 58


state 20

  100 struct_stat: IF . expr THEN matched_stat ELSE stat
  101            | IF . expr THEN stat

    STRING      shift, and go to state 41
    ID          shift, and go to state 42
    INT_CONST   shift, and go to state 43
    REAL_CONST  shift, and go to state 44
    L_PAREN     shift, and go to state 45
    NOT         shift, and go to state 46
    MINUS       shift, and go to state 47
    PLUS        shift, and go to state 48

    var              go to state 49
    subscripted_var  go to state 31
    expr             go to state 59
    simple_expr      go to state 51
    term             go to state 52
    factor           go to state 53
    unsigned_const   go to state 54
    unsigned_num     go to state 55
    func_invok       go to state 56
    plist_finvok     go to state 57


state 21

  102 struct_stat: WHILE . expr DO stat

    STRING      shift, and go to state 41
    ID          shift, and go to state 42
    INT_CONST   shift, and go to state 43
    REAL_CONST  shift, and go to state 44
    L_PAREN     shift, and go to state 45
    NOT         shift, and go to state 46
    MINUS       shift, and go to state 47
    PLUS        shift, and go to state 48

    var              go to state 49
    subscripted_var  go to state 31
    expr             go to state 60
    simple_expr      go to state 51
    term             go to state 52
    factor           go to state 53
    unsigned_const   go to state 54
    unsigned_num     go to state 55
    func_invok       go to state 56
    plist_finvok     go to state 57


state 22

  103 struct_stat: CONTINUE .

    $default  reduce using rule 103 (struct_stat)


state 23

  104 struct_stat: EXIT .

    $default  reduce using rule 104 (struct_stat)


state 24

   61 proc_invok: ID . L_PAREN R_PAREN
   62 var: ID .
   97 plist_finvok: ID . L_PAREN parm

    L_PAREN  shift, and go to state 61

    $default  reduce using rule 62 (var)


state 25

   59 simple_stat: compound_stat .

    $default  reduce using rule 59 (simple_stat)


state 26

   51 compound_stat: _BEGIN stat_list . END
   53 stat_list: stat_list . SEMICOLON stat

    END        shift, and go to state 62
    SEMICOLON  shift, and go to state 63


state 27

   52 stat_list: stat .

    $default  reduce using rule 52 (stat_list)


state 28

   54 stat: simple_stat .

    $default  reduce using rule 54 (stat)


state 29

   58 simple_stat: proc_invok .

    $default  reduce using rule 58 (simple_stat)


state 30

   57 simple_stat: var . ASSIGN expr
   63 var: var . PERIOD ID
   65 subscripted_var: var . LS_BRACKET expr

    LS_BRACKET  shift, and go to state 64
    PERIOD      shift, and go to state 65
    ASSIGN      shift, and go to state 66


state 31

   64 var: subscripted_var . RS_BRACKET
   66 subscripted_var: subscripted_var . COMMA expr

    RS_BRACKET  shift, and go to state 67
    COMMA       shift, and go to state 68


state 32

   60 proc_invok: plist_finvok . R_PAREN
   98 plist_finvok: plist_finvok . COMMA parm

    R_PAREN  shift, and go to state 69
    COMMA    shift, and go to state 70


state 33

   55 stat: struct_stat .

    $default  reduce using rule 55 (stat)


state 34

    1 program: program_head decls compound_stat PERIOD .

    $default  reduce using rule 1 (program)


state 35

   13 type_decl: ID . EQUAL type

    EQUAL  shift, and go to state 71


state 36

    9 type_decl_part: TYPE type_decl_list . SEMICOLON
   12 type_decl_list: type_decl_list . SEMICOLON type_decl

    SEMICOLON  shift, and go to state 72


state 37

   11 type_decl_list: type_decl .

    $default  reduce using rule 11 (type_decl_list)


state 38

   32 var_decl_part: VAR . var_decl_list SEMICOLON

    ID  shift, and go to state 73

    var_decl_list  go to state 74
    var_decl       go to state 75


state 39

    3 decls: const_decl_part type_decl_part var_decl_part . proc_decl_part

    FUNCTION   shift, and go to state 76
    PROCEDURE  shift, and go to state 77

    $default  reduce using rule 39 (proc_decl_part)

    proc_decl_part  go to state 78
    proc_decl_list  go to state 79
    proc_decl       go to state 80
    proc_heading    go to state 81


state 40

    2 program_head: PROGRAM ID L_PAREN ID COMMA . ID R_PAREN SEMICOLON

    ID  shift, and go to state 82


state 41

   92 unsigned_const: STRING .

    $default  reduce using rule 92 (unsigned_const)


state 42

   62 var: ID .
   96 func_invok: ID . L_PAREN R_PAREN
   97 plist_finvok: ID . L_PAREN parm

    L_PAREN  shift, and go to state 83

    $default  reduce using rule 62 (var)


state 43

   93 unsigned_num: INT_CONST .

    $default  reduce using rule 93 (unsigned_num)


state 44

   94 unsigned_num: REAL_CONST .

    $default  reduce using rule 94 (unsigned_num)


state 45

   88 factor: L_PAREN . expr R_PAREN

    STRING      shift, and go to state 41
    ID          shift, and go to state 42
    INT_CONST   shift, and go to state 43
    REAL_CONST  shift, and go to state 44
    L_PAREN     shift, and go to state 45
    NOT         shift, and go to state 46
    MINUS       shift, and go to state 47
    PLUS        shift, and go to state 48
